--- a/src/DevBoard.Infrastructure/DevBoard.Infrastructure.csproj
+++ b/src/DevBoard.Infrastructure/DevBoard.Infrastructure.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\DevBoard.Domain\DevBoard.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
