[Feat] : Added events & rabbitmq

--- a/src/DevBoard.Api/appsettings.json
+++ b/src/DevBoard.Api/appsettings.json
@@ -16,10 +16,13 @@
     "Audience": "DevBoard.Api.Users",
     "ExpiresInMinutes": 60
   },
-  "RabbitMQ": {
-    "Host": "rabbitmq",
-    "VirtualHost": "/",
+  "RabbitMq": {
+    "Host": "localhost",
+    "Port": 5672,
     "Username": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "VirtualHost": "/",
+    "RetryCount": 3,
+    "RetryIntervalSeconds": 5
   }
 }
