--- a/src/DevBoard.Infrastructure/DevBoard.Infrastructure.csproj
+++ b/src/DevBoard.Infrastructure/DevBoard.Infrastructure.csproj
@@ -8,12 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.5.4" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.4" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.20" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DevBoard.Application\DevBoard.Application.csproj" />
     <ProjectReference Include="..\DevBoard.Domain\DevBoard.Domain.csproj" />
   </ItemGroup>
 
