[Feat]: RabbitMq and Outbox pattern implemented

--- a/src/DevBoard.Api/appsettings.json
+++ b/src/DevBoard.Api/appsettings.json
@@ -2,12 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "MassTransit": "Debug",
+      "DevBoard.Infrastructure.Messaging": "Debug",
+      "DevBoard.Infrastructure.BackgroundServices": "Debug"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevBoardDatabase": "Host=host.docker.internal;Port=5432;Database=devboarddb;Username=postgres;Password=kado",
+    "DevBoardDatabase": "Host=host.docker.internal;Port=5432;Database=devboarddb;Username=postgres;Password=kado"
     //"DevBoardDatabase": "Host=localhost;Port=5432;Database=devboarddb;Username=postgres;Password=kado"
   },
   "Jwt": {
@@ -24,5 +27,10 @@
     "VirtualHost": "/",
     "RetryCount": 3,
     "RetryIntervalSeconds": 5
+  },
+  "OutboxProcessor": {
+    "IntervalSeconds": 10,
+    "BatchSize": 20,
+    "MaxRetries": 5
   }
 }
