[Feat]: General OutboxSettings class created & Old rabbitmq events deleted

--- a/src/DevBoard.Api/appsettings.json
+++ b/src/DevBoard.Api/appsettings.json
@@ -20,7 +20,7 @@
     "ExpiresInMinutes": 60
   },
   "RabbitMq": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Port": 5672,
     "Username": "guest",
     "Password": "guest",
@@ -28,9 +28,12 @@
     "RetryCount": 3,
     "RetryIntervalSeconds": 5
   },
-  "OutboxProcessor": {
-    "IntervalSeconds": 10,
-    "BatchSize": 20,
-    "MaxRetries": 5
+  "OutboxSettings": {
+    "ProcessorIntervalSeconds": 10,
+    "ProcessorBatchSize": 20,
+    "MaxRetries": 5,
+    "CleanupIntervalHours": 24,
+    "CleanupRetentionDays": 7,
+    "CleanupStartupDelayMinutes": 5
   }
 }
