[Feat]: Services seperated & Gateway added

--- a/src/Services/Tasks/DevBoard.Services.Tasks.Api/Dockerfile
+++ b/src/Services/Tasks/DevBoard.Services.Tasks.Api/Dockerfile
@@ -1,29 +1,31 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# ============================================================================
+# FILE: src/Services/Tasks/DevBoard.Services.Tasks.Api/Dockerfile
+# ============================================================================
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
-
-# This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Services/Tasks/DevBoard.Services.Tasks.Api/DevBoard.Services.Tasks.Api.csproj", "src/Services/Tasks/DevBoard.Services.Tasks.Api/"]
-RUN dotnet restore "./src/Services/Tasks/DevBoard.Services.Tasks.Api/DevBoard.Services.Tasks.Api.csproj"
-COPY . .
-WORKDIR "/src/src/Services/Tasks/DevBoard.Services.Tasks.Api"
-RUN dotnet build "./DevBoard.Services.Tasks.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+COPY DevBoard.sln ./
+COPY src/Shared/DevBoard.Shared.Contracts/DevBoard.Shared.Contracts.csproj src/Shared/DevBoard.Shared.Contracts/
+COPY src/Shared/DevBoard.Shared.Common/DevBoard.Shared.Common.csproj src/Shared/DevBoard.Shared.Common/
+COPY src/Services/Tasks/DevBoard.Services.Tasks.Api/DevBoard.Services.Tasks.Api.csproj src/Services/Tasks/DevBoard.Services.Tasks.Api/
+COPY src/Services/Tasks/DevBoard.Services.Tasks.Core/DevBoard.Services.Tasks.Core.csproj src/Services/Tasks/DevBoard.Services.Tasks.Core/
+COPY src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/DevBoard.Services.Tasks.Infrastructure.csproj src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/
+
+RUN dotnet restore "src/Services/Tasks/DevBoard.Services.Tasks.Api/DevBoard.Services.Tasks.Api.csproj"
+
+COPY src/ ./src/
+
+WORKDIR /src/src/Services/Tasks/DevBoard.Services.Tasks.Api
+RUN dotnet build "DevBoard.Services.Tasks.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./DevBoard.Services.Tasks.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "DevBoard.Services.Tasks.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
