--- a/src/Services/Tasks/DevBoard.Services.Tasks.Api/appsettings.json
+++ b/src/Services/Tasks/DevBoard.Services.Tasks.Api/appsettings.json
@@ -5,5 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevBoardTaskDb": "Host=host.docker.internal;Port=5432;Database=devboardtaskdb;Username=postgres;Password=kado"
+    //"DevBoardTaskDb": "Host=localhost;Port=5432;Database=devboardtaskdb;Username=postgres;Password=kado"
+  },
+  "RabbitMq": {
+    "Host": "rabbitmq",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "RetryCount": 3,
+    "RetryIntervalSeconds": 5
+  },
+  "Services": {
+    "ProjectService": {
+      "Url": "http://project-service:8080"
+    }
+  }
 }
+
