--- a/src/Services/Identity/DevBoard.Services.Identity.Infrastructure/DevBoard.Services.Identity.Infrastructure.csproj
+++ b/src/Services/Identity/DevBoard.Services.Identity.Infrastructure/DevBoard.Services.Identity.Infrastructure.csproj
@@ -12,6 +12,22 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.10" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+
+	  <!-- EF Core base + tools -->
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+		  <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+
+	  <!-- PostgreSQL provider -->
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+
+	  <!-- Logging + ASP.NET dependencies -->
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
+	  
   </ItemGroup>
 
   <ItemGroup>
