--- a/src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/DevBoard.Services.Tasks.Infrastructure.csproj
+++ b/src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/DevBoard.Services.Tasks.Infrastructure.csproj
@@ -1,19 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
-  </ItemGroup>
+	<ItemGroup>
+		<!-- EF Core base + tools -->
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.10" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\DevBoard.Shared.Common\DevBoard.Shared.Common.csproj" />
-    <ProjectReference Include="..\DevBoard.Services.Tasks.Core\DevBoard.Services.Tasks.Core.csproj" />
-  </ItemGroup>
+		<!-- PostgreSQL provider -->
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+
+		<!-- Logging + ASP.NET dependencies -->
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\Shared\DevBoard.Shared.Common\DevBoard.Shared.Common.csproj" />
+		<ProjectReference Include="..\DevBoard.Services.Tasks.Core\DevBoard.Services.Tasks.Core.csproj" />
+	</ItemGroup>
 
 </Project>
