[Feat]: Db Seeders added for services

--- a/src/Services/Projects/DevBoard.Services.Projects.Api/appsettings.json
+++ b/src/Services/Projects/DevBoard.Services.Projects.Api/appsettings.json
@@ -12,8 +12,7 @@
     "Audience": "DevBoard.Users"
   },
   "ConnectionStrings": {
-    //"DevBoardProjectDb": "Host=localhost;Port=5432;Database=devboardprojectdb;Username=postgres;Password=kado",
-    "DevBoardProjectDb": "Host=host.docker.internal;Port=5432;Database=devboardprojectdb;Username=postgres;Password=kado"
+    "ProjectDb": "Host=project-db;Port=5432;Database=project_db;Username=postgres;Password=kado"
   },
   "RabbitMq": {
     "Host": "rabbitmq",
