--- a/src/Services/Identity/DevBoard.Services.Identity.Api/DevBoard.Services.Identity.Api.csproj
+++ b/src/Services/Identity/DevBoard.Services.Identity.Api/DevBoard.Services.Identity.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
