--- a/src/Services/Tasks/DevBoard.Services.Tasks.Api/DevBoard.Services.Tasks.Api.csproj
+++ b/src/Services/Tasks/DevBoard.Services.Tasks.Api/DevBoard.Services.Tasks.Api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.5.5" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
