--- a/src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/DevBoard.Services.Tasks.Infrastructure.csproj
+++ b/src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/DevBoard.Services.Tasks.Infrastructure.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="Minio" Version="7.0.0" />
 
 		<!-- PostgreSQL provider -->
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
@@ -20,6 +21,7 @@
 		<!-- Logging + ASP.NET dependencies -->
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
 	</ItemGroup>
 
 	<ItemGroup>
