--- a/src/Services/Tasks/DevBoard.Services.Tasks.Api/appsettings.json
+++ b/src/Services/Tasks/DevBoard.Services.Tasks.Api/appsettings.json
@@ -26,7 +26,26 @@
   "Services": {
     "ProjectService": {
       "Url": "http://project-service:8080"
+    },
+    "IdentityService": {
+      "Url": "http://identity-service:8080"
     }
+  },
+  "MinIO": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "BucketName": "task-attachments",
+    "UseSSL": false
+  },
+  "FileUpload": {
+    "MaxFileSizeMB": 10,
+    "MaxAttachmentsPerTask": 10,
+    "MaxAttachmentsPerComment": 5,
+    "AllowedImageExtensions": [ ".jpg", ".jpeg", ".png", ".gif", ".webp", ".svg" ],
+    "AllowedDocumentExtensions": [ ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".txt", ".md", ".csv" ],
+    "AllowedArchiveExtensions": [ ".zip", ".rar", ".7z", ".tar", ".gz" ],
+    "BlockedExtensions": [ ".exe", ".dll", ".bat", ".sh", ".cmd", ".vbs", ".js", ".jar" ]
   }
 }
 
