--- a/src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/DevBoard.Services.Tasks.Infrastructure.csproj
+++ b/src/Services/Tasks/DevBoard.Services.Tasks.Infrastructure/DevBoard.Services.Tasks.Infrastructure.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
 		<PackageReference Include="Minio" Version="7.0.0" />
 
 		<!-- PostgreSQL provider -->
